spec/fixtures/modules/error/plans/args.pp
plan error::args {
  fail_plan('oops', 'test/oops', { 'some' => 'info' })
}
